--- a/app/src/main/res/layout/activity_favourite_movie_detail.xml
+++ b/app/src/main/res/layout/activity_favourite_movie_detail.xml
@@ -4,18 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:id="@+id/layout"
     tools:context=".MovieDetailActivity">
 
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/layout">
-
-        </FrameLayout>
-    </ScrollView>
 </FrameLayout>
