--- a/app/src/main/res/layout/movie_item_layout.xml
+++ b/app/src/main/res/layout/movie_item_layout.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="130dp"
+    android:layout_height="200dp"
     android:layout_margin="0dp"
     android:padding="0dp">
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:contentDescription="@string/movie_item_image"
         android:padding="0dp"
         app:srcCompat="@drawable/ic_movie_cinema" />
